<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/funcionario_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.funcionario.show.ShowFuncionarioFragment">

    <ImageView
        android:id="@+id/imgFuncionarioPerfilFuncionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtNomeFuncionarioPerfilFuncionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:text="@string/txtNomeFuncionarioPerfilFuncionario"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFuncionarioPerfilFuncionario" />

    <TextView
        android:id="@+id/txtNomeEmpresaPerfilFuncionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/txtNomeEmpresaPerfilFuncionario"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFuncaoFuncionarioPerfilFuncionario" />

    <TextView
        android:id="@+id/txtFuncaoFuncionarioPerfilFuncionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/txtFuncaoFuncionarioPerfilFuncionario"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeFuncionarioPerfilFuncionario" />

    <TextView
        android:id="@+id/txtEmailFuncionarioPerfilFuncionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:text="@string/txtEmailFuncionarioPerfilFuncionario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeEmpresaPerfilFuncionario" />

    <TextView
        android:id="@+id/txtCepFuncionarioPerfilFuncionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:hint="@string/cep_funcionario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailFuncionarioPerfilFuncionario" />

</androidx.constraintlayout.widget.ConstraintLayout>