<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lista_funcionario_recycler"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtEmpresa_rcl_view"
        app:layout_constraintStart_toEndOf="@+id/imgFuncionario"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeFuncionario" />

    <TextView
        android:id="@+id/txtNomeEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/nomeEmpresa_hint_rcl_view"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeFuncionario" />

    <TextView
        android:id="@+id/txtNomeFuncionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/nomeProdutor_hint_rcl_view"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imgFuncionario"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgFuncionario"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>